--- a/src/components/Base/Background/rabbit.scss
+++ b/src/components/Base/Background/rabbit.scss
@@ -9,9 +9,9 @@ html, body {
 }
 
 .bar {
-  width: 800px; height: 600px;
+  width: 100%; height: 600px;
   position: relative;
-  background: #283242;
+  //background: #283242;
   overflow: hidden;
 }
 .bar *, .bar *:before, .bar *:after {
@@ -768,32 +768,32 @@ html, body {
 }
 .back-sofa {
   top: 345px; left: 462px;
-  width: 210px; height: 200px;
+  //width: 210px; height: 200px;
   box-shadow: inset 22px 0 #242839, inset 0 -164px #131824, inset 0 -175px #242839;
 
   &:before {
     top: -24px; left: 286px;
     width: 50px; height: 50px;
-    background: #2d2e41;
+    //background: #2d2e41;
     border-radius: 14px 37px 10px 0;
   }
 
   & > div:nth-child(1) {
     top: 24px; left: 35px;
     width: 80px; height: 60px;
-    background: #2d2e41;
+    //background: #2d2e41;
     border-radius: 100% 0 0 22px;
 
     &:before {
       top: -40px; left: 29px;
       width: 120px; height: 100px;
-      background: #2d2e41;
+      //background: #2d2e41;
       border-radius: 80px 0 0 0;
     }
     &:after {
       top: -55px; left: 180px;
       width: 170px; height: 101px;
-      background: #2d2e41;
+      //background: #2d2e41;
       border-radius: 20px 0 0 0;
       border-bottom: 3px solid #fdec66;
       transform-origin: bottom left;
@@ -805,7 +805,7 @@ html, body {
     top: 77px; left: 13px;
     width: 310px; height: 68px;
     box-sizing: border-box;
-    background: #303447;
+    //background: #303447;
     border-radius: 18px 70% 0 6px;
 
     &:before {
@@ -818,7 +818,7 @@ html, body {
     &:after {
       top: 100px; left: 225px;
       width: 20px; height: 80px;
-      background: #383b53;
+      //background: #383b53;
       border-radius: 5px 0 0 0;
     }
   }
@@ -826,7 +826,7 @@ html, body {
     top: 77px; left: 22px;
     width: 240px; height: 20px;
     box-sizing: border-box;
-    background-image: linear-gradient(-152deg, #2d2e41 89%, transparent 89%);
+    //background-image: linear-gradient(-152deg, #2d2e41 89%, transparent 89%);
     border-top: 1px solid #fdec66;
     border-right: 0;
     border-radius: 5px 0 0 0;
@@ -835,7 +835,7 @@ html, body {
     &:before {
       top: 0; left: -13px;
       width: 228px; height: 98px;
-      background: #2d2e41;
+      //background: #2d2e41;
       border-radius: 9% 0 0 5px;
       border-left: 3px solid #fdec66;
       border-right: 3px solid #fdec66;
@@ -866,14 +866,14 @@ html, body {
     &:after {
       top: -44px; left: 4px;
       width: 3px; height: 31px;
-      background: #fef76c;
+      //background: #fef76c;
       transform-origin: bottom left;
       transform: skewX(-22deg);
     }
     & > div {
       top: -34px; left: 6px;
       width: 10px; height: 14px;
-      background: #67ce6f;
+      //background: #67ce6f;
       border-radius: 50%;
       box-shadow: inset -1px 0px 0 3px #5ca348;
       transform: rotate(30deg);
@@ -906,7 +906,7 @@ html, body {
     top: -40px; left: -19px;
     width: 202px; height: 80px;
     border-radius: 0 0 5px 4px;
-    background-image: linear-gradient(65deg, #2d2e41 84%, transparent 0%);
+    //background-image: linear-gradient(65deg, #2d2e41 84%, transparent 0%);
     transform-origin: top left;
     transform: skewX(57deg);
     z-index: 1;
